[gd_scene load_steps=2 format=3 uid="uid://25ebpcm2py65"]

[ext_resource type="Script" path="res://CharacterBody3D.gd" id="1_4rd1i"]

[node name="Player" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0)
script = ExtResource("1_4rd1i")

[node name="Camera3D" type="Camera3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.996078, 0.74902, 0.537255, 1)
light_energy = 0.5
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_bias = 1.0

[node name="FrontCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1)
collide_with_areas = true

[node name="FrontCastBackward" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
target_position = Vector3(0, 0, 1)
collide_with_areas = true

[node name="BackCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 1)
collide_with_areas = true

[node name="BackCastBackward" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
target_position = Vector3(0, 0, -1)
collide_with_areas = true
